[package]
name = "balloond"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
virt = "0.2.11"
log = "0.4.0"
structopt = "0.3.26"
failure = "0.1.8"
env_logger = "0.9.0"
libc = "0.2.139"
sysinfo = "0.2.10"
